--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,6 @@
-# Introduction
+# Документация, о проекте
+
+Эта документация создана для деплоя приложения на ваши машины, и подробного описания для чего нужен проект.
+Единственный разработчик [skill](https://github.com/Skill-g)
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
