--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,7 @@
 # Документация, о проекте
 
 Эта документация создана для деплоя приложения на ваши машины, и подробного описания для чего нужен проект.
-Единственный разработчик [skill](https://github.com/Skill-g)
+
+#### Единственный разработчик [Skill | Никита Епифанцев](https://github.com/Skill-g)
  
 
