--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,29 @@
-# About
+# В чем цель проекта?
 
-This is the about page! This page is shown on the navbar.
+- Проект создан для помощи студентам, и оказания им помощи со стороны психолога и преподовательского коллектива
+
+# Какие проблемы он решает?
+
+- **Буллинг** — это серьезная проблема, которая может затронуть как детей, так и взрослых. В нашем сообществе мы поддерживаем жертв буллинга и помогаем им развивать навыки самозащиты и уверенности.
+
+- **Травля** — может иметь различные формы и происходить в разных средах. Мы предоставляем ресурсы и советы для тех, кто столкнулся с травлей, а также работаем над просветительскими мероприятиями для предотвращения травли.
+
+- **Психологическое благополучие:** Мы придаем важное значение психологическому здоровью студентов. Наши психологи помогают тем, кто столкнулся с буллингом или травлей, развивать стратегии управления стрессом и тревожностью.
+
+- **Социальная адаптация:** Для новичков и студентов, переживающих сложности в адаптации к новой среде, мы предоставляем ресурсы и поддержку, чтобы помочь им интегрироваться и находить свое место в обществе.
+
+# Как мы помогаем?
+
+Мы предоставляем следующие виды поддержки и ресурсов:
+
+- **Консультации с психологом:** Студенты могут обратиться к нашиму психологу для получения совета и помощи в решении проблем, связанных с буллингом или травлей.
+
+- **Семинары и мастер-классы:** Мы проводим обучающие семинары и мастер-классы, направленные на развитие навыков самозащиты, повышение уровня уверенности и разрешение конфликтов.
+
+- **Онлайн-ресурсы:** На нашем веб-сайте вы найдете полезные статьи, видеоматериалы и рекомендации по предотвращению и преодолению буллинга и травли.
+
+# Присоединяйтесь к нам
+
+Мы приглашаем всех студентов и заинтересованных лиц присоединиться к нашему проекту и внести свой вклад в создание безопасной и дружелюбной среды для обучения и развития. Вместе мы можем сделать мир лучше!
+
+![Logo](https://kipk.edu.kz/wp-content/uploads/2017/09/cropped-kipk_logo_sm.png)
