--- a/pages/tech.mdx
+++ b/pages/tech.mdx
@@ -4,7 +4,7 @@ import { Cpu, Blocks, Box } from 'lucide-react';
 # Настройки
 
 <Cards>
-  <Card icon={<Cpu />} title="Работа с проектом" href="/tech/" />
-  <Card icon={<Blocks  />} title="Деплой" href="/tech/" />
-  <Card icon={<Box />} title="Nginx" href="/tech/" />
+  <Card icon={<Cpu />} title="Работа с проектом" href="/tech/work" />
+  <Card icon={<Blocks  />} title="Деплой" href="/tech/deploy" />
+  <Card icon={<Box />} title="Настройка nginx" href="/tech/nginx" />
 </Cards>
