--- a/pages/contact.mdx
+++ b/pages/contact.mdx
@@ -1,4 +1,8 @@
 # Контакты
     ## Разработчик
-    #### [Telegram](https://t.me/Skill331)
-    #### [Discord]
+    #### [Telegram](https://t.me/Skillxv)
+    #### [GitHub](https://github.com/Skill-g)
+    #### Discord - skillx3
+
+    ## Колледж
+    #### [KIPK - Site](https://kipk.edu.kz/)
