--- a/pages/tech/work.mdx
+++ b/pages/tech/work.mdx
@@ -55,7 +55,7 @@ npx prisma db push
 npx prisma db pull
 ```
 
-#### Backend готов для запуска напишите в ``` cmd ```
+#### Backend готов для запуска, напишите в ``` cmd ```
 
 ```bash copy
 node index.js
